Menu a la française --HTML + CSS

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </a>    
 
-                <a class="textDecorationNone" href="#">
+                <a class="textDecorationNone" href="MenuALaFrancaise.html">
                     <div class="restaurantCarte">
                         <img class="restaurantIMG" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant a la française">
                         <div class="restaurantInfo">
