--- a/MenuLaNoteEntchantée.html
+++ b/MenuLaNoteEntchantée.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/67b4180896.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styleMenu.css">
-    <title>Menu A La Française</title>
+    <title>Menu La Note Enchantée</title>
 </head>
 <body>
     <header>
@@ -15,65 +15,72 @@
             <img class="headerLogo" src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
         </nav>
     </header>
+
     <main>
-        <img class="mainImage" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française">
+        <img class="mainImage" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant La note enchantée">
         <div class="menu">   
             <div class="titreRestaurant">
-                <h1 class="nomRestaurant">À la française</h1>
+                <h1 class="nomRestaurant">La note enchantée</h1>
                 <div class="coeur"><i class="fa-solid fa-heart"></i></div>
             </div>
-
             <div class="tousCarte">
-
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
                     <div class="commande">
-                        <p class="plat">Tartare de poulpe acidulé</p>
+                        <p class="plat">Ravioles de foie gras</p>
                         <div class="info">
-                            <p class="ingredient">Aux zestes d'orange</p>
+                            <p class="ingredient">Accompagnés de leur crème à la truffe</p>
                             <p class="prix">25€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Velouté de légumes d'antan</p>
+                        <p class="plat">Caviar osciètre</p>
                         <div class="info">
-                            <p class="ingredient">Carotte, panais, topinambour</p>
+                            <p class="ingredient">Sur blini à la farine de blé noir</p>
                             <p class="prix">35€</p>
+                        </div>                        
+                    </div>
+                    <div class="commande">
+                        <p class="plat">Homard et espuma de potiron</p>
+                        <div class="info">
+                            <p class="ingredient">Mariné aux zestes d'orange</p>
+                            <p class="prix">20€</p>
                         </div>                        
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Soupe à l'oignon</p>
+                        <p class="plat">Foie gras de canard cuit entier</p>
                         <div class="info">
-                            <p class="ingredient">Revisitée</p>
-                            <p class="prix">20€</p>
+                            <p class="ingredient">Confiture de figue et pain toasté</p>
+                            <p class="prix">35€</p>
                         </div>                        
                     </div>
+
                 </div>
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
                     <div class="commande">
-                        <p class="plat">Coquilles Saint-Jacques</p>
+                        <p class="plat">Noix de coquilles Saint-Jacques</p>
                         <div class="info">
-                            <p class="ingredient">Accompagnées d'une purée de panais</p>
+                            <p class="ingredient">Sur lit de purée de céleri-rave</p>
                             <p class="prix">40€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Magret de canard</p>
+                        <p class="plat">Langoustine poêlée</p>
                         <div class="info">
-                            <p class="ingredient">Et parmentier de pommes de terre</p>
+                            <p class="ingredient">Purée de patate douce</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Pigeonneau d’Ille-et-Vilaine</p>
+                        <p class="plat">Mijoté de queue de boeuf</p>
                         <div class="info">
-                            <p class="ingredient">Sur son lit de gnocchis aux légumes</p>
+                            <p class="ingredient">Et riz sauvage aux zestes de citron</p>
                             <p class="prix">44€</p>
                         </div>
                     </div>
@@ -82,25 +89,25 @@
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
                     <div class="commande">
-                        <p class="plat">Pétales de violettes glacés</p>
+                        <p class="plat">Macaron noisette et chocolat</p>
                         <div class="info">
-                            <p class="ingredient">Et purée de noisettes</p>
+                            <p class="ingredient">Glace au caramel brun et sel de Guérande</p>
                             <p class="prix">18€</p>
                         </div>                    
-                    </div>
+                    </div class="commande">
 
                     <div class="commande">
-                        <p class="plat">Fondant au chocolat</p>
+                        <p class="plat">Baba au rhum revisité</p>
                         <div class="info">
-                            <p class="ingredient">Revisité</p>
+                            <p class="ingredient">Avec son coulis de citron</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Millefeuille croustillant</p>
+                        <p class="plat">Tarte au citron meringuée</p>
                         <div class="info">
-                            <p class="ingredient">Myrtilles et pâte d’amande</p>
+                            <p class="ingredient">Déstructurée</p>
                             <p class="prix">23€</p>
                         </div>
                     </div>
