--- a/MenuLeDéliceDesSens.html
+++ b/MenuLeDéliceDesSens.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/67b4180896.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styleMenu.css">
-    <title>Menu A La Française</title>
+    <title>Menu Le Délice Des Sens</title>
 </head>
 <body>
     <header>
@@ -15,38 +15,36 @@
             <img class="headerLogo" src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
         </nav>
     </header>
+
     <main>
-        <img class="mainImage" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française">
+        <img class="mainImage" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Le délice des sens">
         <div class="menu">   
             <div class="titreRestaurant">
-                <h1 class="nomRestaurant">À la française</h1>
+                <h1 class="nomRestaurant">Le délice des sens</h1>
                 <div class="coeur"><i class="fa-solid fa-heart"></i></div>
             </div>
-
             <div class="tousCarte">
-
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
                     <div class="commande">
-                        <p class="plat">Tartare de poulpe acidulé</p>
+                        <p class="plat">Tartare de thon</p>
                         <div class="info">
-                            <p class="ingredient">Aux zestes d'orange</p>
+                            <p class="ingredient">Assaisonné au yuzu</p>
                             <p class="prix">25€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Velouté de légumes d'antan</p>
+                        <p class="plat">Bouchée de homard croustillant </p>
                         <div class="info">
-                            <p class="ingredient">Carotte, panais, topinambour</p>
+                            <p class="ingredient">Et sa farandole de petits légumes</p>
                             <p class="prix">35€</p>
                         </div>                        
                     </div>
-
                     <div class="commande">
-                        <p class="plat">Soupe à l'oignon</p>
+                        <p class="plat">Velouté de cèpes </p>
                         <div class="info">
-                            <p class="ingredient">Revisitée</p>
+                            <p class="ingredient">Aux truffes</p>
                             <p class="prix">20€</p>
                         </div>                        
                     </div>
@@ -55,25 +53,25 @@
                 <div class="carte">
                     <p class="type type2">PLATS</p>
                     <div class="commande">
-                        <p class="plat">Coquilles Saint-Jacques</p>
+                        <p class="plat">Poulet rôti aux herbes de Provence </p>
                         <div class="info">
-                            <p class="ingredient">Accompagnées d'une purée de panais</p>
+                            <p class="ingredient">Et sa crème de truffe</p>
                             <p class="prix">40€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Magret de canard</p>
+                        <p class="plat">Langouste rôtie </p>
                         <div class="info">
-                            <p class="ingredient">Et parmentier de pommes de terre</p>
+                            <p class="ingredient">Et ses légumes de saison</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Pigeonneau d’Ille-et-Vilaine</p>
+                        <p class="plat">Côte de boeuf Angus </p>
                         <div class="info">
-                            <p class="ingredient">Sur son lit de gnocchis aux légumes</p>
+                            <p class="ingredient">Et sa purée de panais</p>
                             <p class="prix">44€</p>
                         </div>
                     </div>
@@ -82,25 +80,25 @@
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
                     <div class="commande">
-                        <p class="plat">Pétales de violettes glacés</p>
+                        <p class="plat">Farandole de desserts</p>
                         <div class="info">
-                            <p class="ingredient">Et purée de noisettes</p>
+                            <p class="ingredient">Du chef</p>
                             <p class="prix">18€</p>
                         </div>                    
-                    </div>
+                    </div class="commande">
 
                     <div class="commande">
-                        <p class="plat">Fondant au chocolat</p>
+                        <p class="plat">Crème brulée </p>
                         <div class="info">
-                            <p class="ingredient">Revisité</p>
+                            <p class="ingredient">Revisitée</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
 
                     <div class="commande">
-                        <p class="plat">Millefeuille croustillant</p>
+                        <p class="plat">Tiramisu </p>
                         <div class="info">
-                            <p class="ingredient">Myrtilles et pâte d’amande</p>
+                            <p class="ingredient">À la noisette</p>
                             <p class="prix">23€</p>
                         </div>
                     </div>
