--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1 class="restaurantTitre">Restaurants</h1>
             <div class="restaurantTous">
 
-                <a class="textDecorationNone" href="#">
+                <a class="textDecorationNone" href="MenuLaPaletteDuGout.html">
                     <div class="restaurantCarte">
                         <img class="restaurantIMG" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant jay wennington">
                         <div class="restaurantInfo">
@@ -70,7 +70,7 @@
                     </div>
                 </a>
 
-                <a class="textDecorationNone" href="#">
+                <a class="textDecorationNone" href="MenuLaNoteEntchantée.html">
                     <div class="restaurantCarte">
                         <img class="restaurantIMG" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la note enchantée">
                         <div class="restaurantInfo">
@@ -96,7 +96,7 @@
                     </div>
                 </a>
 
-                <a class="textDecorationNone" href="#">
+                <a class="textDecorationNone" href="MenuLeDéliceDesSens.html">
                     <div class="restaurantCarte">
                         <img class="restaurantIMG" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant Le délice des sens">
                         <div class="restaurantInfo">
