Ajout des animations

--- a/MenuALaFrancaise.html
+++ b/MenuALaFrancaise.html
@@ -20,89 +20,119 @@
         <div class="menu">   
             <div class="titreRestaurant">
                 <h1 class="nomRestaurant">À la française</h1>
-                <div class="coeur"><i class="fa-solid fa-heart"></i></div>
+                <div class="coeur">
+                    <i class="fa-solid fa-heart coeurPlein"></i>
+                    <i class="fa-regular fa-heart coeurVide"></i>
+                </div>
             </div>
 
             <div class="tousCarte">
 
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande">
-                        <p class="plat">Tartare de poulpe acidulé</p>
-                        <div class="info">
-                            <p class="ingredient">Aux zestes d'orange</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Tartare de poulpe acidulé</p>
+                                <p class="ingredient">Aux zestes d'orange</p>
+                            </div>
                             <p class="prix">25€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Velouté de légumes d'antan</p>
-                        <div class="info">
-                            <p class="ingredient">Carotte, panais, topinambour</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Velouté de légumes d'antan</p>
+                                <p class="ingredient">Carotte, panais, topinambour</p>
+                            </div>
                             <p class="prix">35€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                        
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Soupe à l'oignon</p>
-                        <div class="info">
-                            <p class="ingredient">Revisitée</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Soupe à l'oignon</p>
+                                <p class="ingredient">Revisitée</p>
+                            </div>
                             <p class="prix">20€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                          
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande">
-                        <p class="plat">Coquilles Saint-Jacques</p>
-                        <div class="info">
-                            <p class="ingredient">Accompagnées d'une purée de panais</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Coquilles Saint-Jacques</p>
+                                <p class="ingredient">Accompagnées d'une purée de panais</p>
+                            </div>
                             <p class="prix">40€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Magret de canard</p>
-                        <div class="info">
-                            <p class="ingredient">Et parmentier de pommes de terre</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Magret de canard</p>
+                                <p class="ingredient">Et parmentier de pommes de terre</p>
+                            </div>
                             <p class="prix">35€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Pigeonneau d’Ille-et-Vilaine</p>
-                        <div class="info">
-                            <p class="ingredient">Sur son lit de gnocchis aux légumes</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Pigeonneau d’Ille-et-Vilaine</p>
+                                <p class="ingredient">Sur son lit de gnocchis aux légumes</p>
+                            </div>
                             <p class="prix">44€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande">
-                        <p class="plat">Pétales de violettes glacés</p>
-                        <div class="info">
-                            <p class="ingredient">Et purée de noisettes</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Pétales de violettes glacés</p>
+                                <p class="ingredient">Et purée de noisettes</p>
+                            </div>
                             <p class="prix">18€</p>
-                        </div>                    
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                      
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Fondant au chocolat</p>
-                        <div class="info">
-                            <p class="ingredient">Revisité</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Fondant au chocolat</p>
+                                <p class="ingredient">Revisité</p>
+                            </div>
                             <p class="prix">22€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Millefeuille croustillant</p>
-                        <div class="info">
-                            <p class="ingredient">Myrtilles et pâte d’amande</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Millefeuille croustillant</p>
+                                <p class="ingredient">Myrtilles et pâte d’amande</p>
+                            </div>
                             <p class="prix">23€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
             </div>
