--- a/MenuLaNoteEntchantée.html
+++ b/MenuLaNoteEntchantée.html
@@ -21,95 +21,130 @@
         <div class="menu">   
             <div class="titreRestaurant">
                 <h1 class="nomRestaurant">La note enchantée</h1>
-                <div class="coeur"><i class="fa-solid fa-heart"></i></div>
+                <div class="coeur">
+                    <i class="fa-solid fa-heart coeurPlein"></i>
+                    <i class="fa-regular fa-heart coeurVide"></i>
+                </div>
             </div>
             <div class="tousCarte">
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande">
-                        <p class="plat">Ravioles de foie gras</p>
-                        <div class="info">
-                            <p class="ingredient">Accompagnés de leur crème à la truffe</p>
+                    
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Ravioles de foie gras </p>
+                                <p class="ingredient">Accompagnés de leur crème à la truffe</p>
+                            </div>
                             <p class="prix">25€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Caviar osciètre</p>
-                        <div class="info">
-                            <p class="ingredient">Sur blini à la farine de blé noir</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Caviar osciètre </p>
+                                <p class="ingredient">Sur blini à la farine de blé noir</p>
+                            </div>
                             <p class="prix">35€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                         
                     </div>
-                    <div class="commande">
-                        <p class="plat">Homard et espuma de potiron</p>
-                        <div class="info">
-                            <p class="ingredient">Mariné aux zestes d'orange</p>
+
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Homard et espuma de potiron</p>
+                                <p class="ingredient">Mariné aux zestes d'orange</p>
+                            </div>
                             <p class="prix">20€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                   
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Foie gras de canard cuit entier</p>
-                        <div class="info">
-                            <p class="ingredient">Confiture de figue et pain toasté</p>
+                    <div class="commande" id="commande4">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Foie gras de canard cuit entier</p>
+                                <p class="ingredient">Confiture de figue et pain toasté</p>
+                            </div>
                             <p class="prix">35€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                        
                     </div>
 
                 </div>
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande">
-                        <p class="plat">Noix de coquilles Saint-Jacques</p>
-                        <div class="info">
-                            <p class="ingredient">Sur lit de purée de céleri-rave</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Noix de coquilles Saint-Jacques</p>
+                                <p class="ingredient">Sur lit de purée de céleri-rave</p>
+                            </div>
                             <p class="prix">40€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Langoustine poêlée</p>
-                        <div class="info">
-                            <p class="ingredient">Purée de patate douce</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Langoustine poêlée</p>
+                                <p class="ingredient">Purée de patate douce</p>
+                            </div>
                             <p class="prix">35€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Mijoté de queue de boeuf</p>
-                        <div class="info">
-                            <p class="ingredient">Et riz sauvage aux zestes de citron</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Mijoté de queue de boeuf </p>
+                                <p class="ingredient">Et riz sauvage aux zestes de citron</p>
+                            </div>
                             <p class="prix">44€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande">
-                        <p class="plat">Macaron noisette et chocolat</p>
-                        <div class="info">
-                            <p class="ingredient">Glace au caramel brun et sel de Guérande</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Macaron noisette et chocolat</p>
+                                <p class="ingredient">Glace au caramel brun et sel de Guérande</p>
+                            </div>
                             <p class="prix">18€</p>
-                        </div>                    
-                    </div class="commande">
-
-                    <div class="commande">
-                        <p class="plat">Baba au rhum revisité</p>
-                        <div class="info">
-                            <p class="ingredient">Avec son coulis de citron</p>
-                            <p class="prix">22€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                     
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Tarte au citron meringuée</p>
-                        <div class="info">
-                            <p class="ingredient">Déstructurée</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Baba au rhum revisité </p>
+                                <p class="ingredient">Avec son coulis de citron</p>
+                            </div>
+                            <p class="prix">22€</p>
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
+                    </div>
+
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Tarte au citron meringuée </p>
+                                <p class="ingredient">Déstructurée</p>
+                            </div>
                             <p class="prix">23€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
             </div>
