--- a/MenuLaPaletteDuGout.html
+++ b/MenuLaPaletteDuGout.html
@@ -21,86 +21,117 @@
         <div class="menu">   
             <div class="titreRestaurant">
                 <h1 class="nomRestaurant">La palette du goût</h1>
-                <div class="coeur"><i class="fa-solid fa-heart"></i></div>
+                <div class="coeur">
+                    <i class="fa-solid fa-heart coeurPlein"></i>
+                    <i class="fa-regular fa-heart coeurVide"></i>
+                </div>
             </div>
             <div class="tousCarte">
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande">
-                        <p class="plat">Fricassée d'escargot</p>
-                        <div class="info">
-                            <p class="ingredient">Au piment d'Espelette</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Fricassée d'escargot</p>
+                                <p class="ingredient">Au piment d'Espelette </p>
+                            </div>
                             <p class="prix">25€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Foie gras de canard mi-cuit</p>
-                        <div class="info">
-                            <p class="ingredient">Et ses copeaux de truffe noire</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Foie gras de canard mi-cuit</p>
+                                <p class="ingredient">Et ses copeaux de truffe noire</p>
+                            </div>
                             <p class="prix">35€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                   
                     </div>
-                    <div class="commande">
-                        <p class="plat">Oeuf au plat</p>
-                        <div class="info">
-                            <p class="ingredient">Assaisonné à la truffe sur lit de caviar</p>
+
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Oeuf au plat</p>
+                                <p class="ingredient">Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
                             <p class="prix">20€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande">
-                        <p class="plat">Filet de boeuf aux herbes</p>
-                        <div class="info">
-                            <p class="ingredient">Accompagné de sa ribambelle de légumes</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Filet de boeuf aux herbes</p>
+                                <p class="ingredient">Accompagné de sa ribambelle de légumes</p>
+                            </div>
                             <p class="prix">40€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Parmentier de queue de boeuf</p>
-                        <div class="info">
-                            <p class="ingredient">À la truffe noire sur sa purée de panais</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Parmentier de queue de boeuf</p>
+                                <p class="ingredient">À la truffe noire sur sa purée de panais</p>
+                            </div>
                             <p class="prix">35€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Filet de turbot</p>
-                        <div class="info">
-                            <p class="ingredient">Aux agrumes</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Filet de turbot</p>
+                                <p class="ingredient">Aux agrumes</p>
+                            </div>
                             <p class="prix">44€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande">
-                        <p class="plat">Paris-Brest</p>
-                        <div class="info">
-                            <p class="ingredient">Revisité</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Paris-Brest</p>
+                                <p class="ingredient">Revisité</p>
+                            </div>
                             <p class="prix">18€</p>
-                        </div>                    
-                    </div class="commande">
-
-                    <div class="commande">
-                        <p class="plat">Macaron au chocolat d'exception </p>
-                        <div class="info">
-                            <p class="ingredient">Et glace à la vanille de Madagascar</p>
-                            <p class="prix">22€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>              
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Mousse au chocolat </p>
-                        <div class="info">
-                            <p class="ingredient">Au piment d'Espelette et à la truffe noire</p>
-                            <p class="prix">23€</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Macaron au chocolat d'exception </p>
+                                <p class="ingredient">Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <p class="prix">22€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
+                    </div>
+
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Mousse au chocolat </p>
+                                <p class="ingredient">Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <p class="prix">23€  </p>
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
                 </div>
             </div>
