--- a/MenuLeDéliceDesSens.html
+++ b/MenuLeDéliceDesSens.html
@@ -21,86 +21,116 @@
         <div class="menu">   
             <div class="titreRestaurant">
                 <h1 class="nomRestaurant">Le délice des sens</h1>
-                <div class="coeur"><i class="fa-solid fa-heart"></i></div>
+                <div class="coeur">
+                    <i class="fa-solid fa-heart coeurPlein"></i>
+                    <i class="fa-regular fa-heart coeurVide"></i>
+                </div>
             </div>
             <div class="tousCarte">
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande">
-                        <p class="plat">Tartare de thon</p>
-                        <div class="info">
-                            <p class="ingredient">Assaisonné au yuzu</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Tartare de thon</p>
+                                <p class="ingredient">Assaisonné au yuzu</p>
+                            </div>
                             <p class="prix">25€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Bouchée de homard croustillant </p>
-                        <div class="info">
-                            <p class="ingredient">Et sa farandole de petits légumes</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Bouchée de homard croustillant </p>
+                                <p class="ingredient">Et sa farandole de petits légumes</p>
+                            </div>
                             <p class="prix">35€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                       
                     </div>
-                    <div class="commande">
-                        <p class="plat">Velouté de cèpes </p>
-                        <div class="info">
-                            <p class="ingredient">Aux truffes</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Velouté de cèpes </p>
+                                <p class="ingredient">Aux truffes</p>
+                            </div>
                             <p class="prix">20€</p>
-                        </div>                        
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                    
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande">
-                        <p class="plat">Poulet rôti aux herbes de Provence </p>
-                        <div class="info">
-                            <p class="ingredient">Et sa crème de truffe</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Poulet rôti aux herbes de Provence </p>
+                                <p class="ingredient">Et sa crème de truffe</p>
+                            </div>
                             <p class="prix">40€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Langouste rôtie </p>
-                        <div class="info">
-                            <p class="ingredient">Et ses légumes de saison</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Langouste rôtie </p>
+                                <p class="ingredient">Et ses légumes de saison</p>
+                            </div>
                             <p class="prix">35€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Côte de boeuf Angus </p>
-                        <div class="info">
-                            <p class="ingredient">Et sa purée de panais</p>
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Côte de boeuf Angus </p>
+                                <p class="ingredient">Et sa purée de panais</p>
+                            </div>
                             <p class="prix">44€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande">
-                        <p class="plat">Farandole de desserts</p>
-                        <div class="info">
-                            <p class="ingredient">Du chef</p>
+                    <div class="commande" id="commande1">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Farandole de desserts</p>
+                                <p class="ingredient">Du chef</p>
+                            </div>
                             <p class="prix">18€</p>
-                        </div>                    
-                    </div class="commande">
-
-                    <div class="commande">
-                        <p class="plat">Crème brulée </p>
-                        <div class="info">
-                            <p class="ingredient">Revisitée</p>
-                            <p class="prix">22€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                  
                     </div>
 
-                    <div class="commande">
-                        <p class="plat">Tiramisu </p>
-                        <div class="info">
-                            <p class="ingredient">À la noisette</p>
+                    <div class="commande" id="commande2">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Crème brulée</p>
+                                <p class="ingredient">Revisitée</p>
+                            </div>
+                            <p class="prix">22€</p>
+                        </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
+                    </div>
+
+                    <div class="commande" id="commande3">
+                        <div class="JCP">
+                            <div class="info">
+                                <p class="plat">Tiramisu</p>
+                                <p class="ingredient">À la noisette</p>
+                            </div>
                             <p class="prix">23€</p>
                         </div>
+                        <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
                 </div>
             </div>
