--- a/index.html
+++ b/index.html
@@ -68,71 +68,72 @@
             <div class="restaurant">
                 <h1 class="restaurantTitre">Restaurants</h1>
                 <div class="restaurantTous">
-
-                    <a class="textDecorationNone" href="MenuLaPaletteDuGout.html">
-                        <div class="restaurantCarte">
-                            <img class="restaurantIMG" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant jay wennington">
-                            <div class="restaurantInfo">
-                                <div class="restaurantInfoE">
-                                    <h2 class="restaurantNom">La palette du goût</h2>
-                                    <p class="restaurantLieu">Ménilmontant</p>
-                                </div>
-                                <div class="coeur">
-                                    <i class="fa-solid fa-heart coeurPlein"></i>
-                                    <i class="fa-regular fa-heart coeurVide"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="textDecorationNone" href="MenuLaNoteEntchantée.html">
-                        <div class="restaurantCarte">
-                            <img class="restaurantIMG" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la note enchantée">
-                            <div class="restaurantInfo">
-                                <div class="restaurantInfoE">
-                                    <h2 class="restaurantNom">La note enchantée</h2>
-                                    <p class="restaurantLieu">Charonne</p>
-                                </div>
-                                <div class="coeur">
-                                    <i class="fa-solid fa-heart coeurPlein"></i>
-                                    <i class="fa-regular fa-heart coeurVide"></i>
+                    <div class="colone">
+                        <a class="textDecorationNone" href="MenuLaPaletteDuGout.html">
+                            <div class="restaurantCarte">
+                                <img class="restaurantIMG" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant jay wennington">
+                                <div class="restaurantInfo">
+                                    <div class="restaurantInfoE">
+                                        <h2 class="restaurantNom">La palette du goût</h2>
+                                        <p class="restaurantLieu">Ménilmontant</p>
+                                    </div>
+                                    <div class="coeur">
+                                        <i class="fa-solid fa-heart coeurPlein"></i>
+                                        <i class="fa-regular fa-heart coeurVide"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>    
+                        </a>
 
-                    <a class="textDecorationNone" href="MenuALaFrancaise.html">
-                        <div class="restaurantCarte">
-                            <img class="restaurantIMG" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant a la française">
-                            <div class="restaurantInfo">
-                                <div class="restaurantInfoE">
-                                    <h2 class="restaurantNom">&Agrave; la française</h2>
-                                    <p class="restaurantLieu">Cité Rouge</p>
-                                </div>
-                                <div class="coeur">
-                                    <i class="fa-solid fa-heart coeurPlein"></i>
-                                    <i class="fa-regular fa-heart coeurVide"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="textDecorationNone" href="MenuLeDéliceDesSens.html">
-                        <div class="restaurantCarte">
-                            <img class="restaurantIMG" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant Le délice des sens">
-                            <div class="restaurantInfo">
-                                <div class="restaurantInfoE">    
-                                    <h2 class="restaurantNom">Le délice des sens</h2>
-                                    <p class="restaurantLieu">Folie-Méricourt</p>
-                                </div>     
-                                <div class="coeur">
-                                    <i class="fa-solid fa-heart coeurPlein"></i>
-                                    <i class="fa-regular fa-heart coeurVide"></i>
+                        <a class="textDecorationNone" href="MenuLaNoteEntchantée.html">
+                            <div class="restaurantCarte">
+                                <img class="restaurantIMG" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la note enchantée">
+                                <div class="restaurantInfo">
+                                    <div class="restaurantInfoE">
+                                        <h2 class="restaurantNom">La note enchantée</h2>
+                                        <p class="restaurantLieu">Charonne</p>
+                                    </div>
+                                    <div class="coeur">
+                                        <i class="fa-solid fa-heart coeurPlein"></i>
+                                        <i class="fa-regular fa-heart coeurVide"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>    
+                    </div>
+                    <div class="colone">
+                        <a class="textDecorationNone" href="MenuALaFrancaise.html">
+                            <div class="restaurantCarte">
+                                <img class="restaurantIMG" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant a la française">
+                                <div class="restaurantInfo">
+                                    <div class="restaurantInfoE">
+                                        <h2 class="restaurantNom">&Agrave; la française</h2>
+                                        <p class="restaurantLieu">Cité Rouge</p>
+                                    </div>
+                                    <div class="coeur">
+                                        <i class="fa-solid fa-heart coeurPlein"></i>
+                                        <i class="fa-regular fa-heart coeurVide"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
 
+                        <a class="textDecorationNone" href="MenuLeDéliceDesSens.html">
+                            <div class="restaurantCarte">
+                                <img class="restaurantIMG" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image du restaurant Le délice des sens">
+                                <div class="restaurantInfo">
+                                    <div class="restaurantInfoE">    
+                                        <h2 class="restaurantNom">Le délice des sens</h2>
+                                        <p class="restaurantLieu">Folie-Méricourt</p>
+                                    </div>     
+                                    <div class="coeur">
+                                        <i class="fa-solid fa-heart coeurPlein"></i>
+                                        <i class="fa-regular fa-heart coeurVide"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
 
